# semantically-open-data

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dependencies.py  docker-compose.yml  init-ollama.sh  main.py  mongo-init.js  pyproject.toml
datasets/: berlin.py  chemnitz.py  dresden.py  leipzig.py  utils.py  utils_test.py
embeddings/: generation.py  utils.py  utils_test.py
infrastructure/: logger.py
src/: main.py
src/datasets/: base_data_downloader.py  berlin.py  bootstrap.py  chemnitz.py  datasets_metadata.py  dresden.py  leipzig.py  open_data_portal_stadt_chemnitz.csv  stats.py
src/datasets_api/: dataset_dto.py  datasets.py  datasets_controller.py  datasets_dto.py  router.py
src/datasets_api/qa_cache/: qa_cache.py
src/datasets_api/qa_cache/qa_cache/: What_is_the_color_of_grass_in_Germany__0.json  What_is_the_color_of_grass_in_Germany__1.json  What_is_the_color_of_grass_in_Germany__3_2.json  What_is_the_color_of_grass_in_Germany__3_4.json  What_is_the_color_of_grass_in_Germany__3_6.json  What_is_the_color_of_grass_in_Germany__3_8.json
src/domain/repositories/: dataset_repository.py
src/domain/services/: dataset_buffer.py  dataset_service.py  llm_dto.py  llm_service.py
src/infrastructure/: config.py  logger.py  mongo.py  mongo_db.py  paths.py
src/tests/unit/: conftest.py  test_health.py
src/utils/: buffer_abc.py  datasets_utils.py  datasets_utils_test.py  embeddings_utils.py  embeddings_utils_test.py  file.py  llm_utils.py
src/vector_search/: embedder.py  generate_embeddings.py  vector_db.py  vector_db_buffer.py
vector_search/: embedder.py  generate_embeddings.py  utils.py  utils_test.py  vector_db.py
