[project]
name = "open-data-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
