[project]
name = "semantic-open-data"
version = "0.1.0"
description = "Semantic Open Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "einops>=0.8.1",
    "fastapi>=0.116.0",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "peft>=0.16.0",
    "playwright>=1.53.0",
    "qdrant-client>=1.14.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
lint = "ruff check src/"
format = "ruff format src/"
